[gd_scene load_steps=4 format=3 uid="uid://byjmdwoosl8a3"]

[ext_resource type="Texture2D" uid="uid://bggni8sn1nl73" path="res://temp-assets/32x32-cube.png" id="1_46wqp"]
[ext_resource type="Script" path="res://logistics/technologyManager/TechTreeNode.gd" id="1_80c06"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_h5o6b"]
size = Vector2(32, 32)

[node name="TechTreeNode" type="Node2D"]
script = ExtResource("1_80c06")

[node name="Sprite2D" type="Sprite2D" parent="."]
self_modulate = Color(0.054902, 0.690196, 0.733333, 1)
texture = ExtResource("1_46wqp")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("RectangleShape2D_h5o6b")
debug_color = Color(0.313726, 0.623529, 0.113725, 0.419608)

[node name="CostLabel" type="Label" parent="."]
offset_left = -42.0
offset_top = 14.0
offset_right = 45.0
offset_bottom = 37.0
text = "000"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="input_event" from="Area2D" to="." method="_on_area_2d_input_event"]
